--- a/index.html
+++ b/index.html
@@ -134,10 +134,26 @@
 
 <header id="home" class="text-center overflow-hidden">
   <img src="assets/img/slide/img04.jpg" class="w-100 d-none d-md-block">
-  <div class="hero--wrapper"> 
-    <h1>La Carrera que te DESAFÍA a Conquistar la Selva Valdiviana</h1>
-    <img src="assets/img/logofutangue.png" alt="">
+  <img src="assets/img/slide/img03.jpg" class="w-100 d-block d-md-none">
+
+  <div class="hero--wrapper d-flex justify-content-md-center">
+    <div class="container">
+      <h1 class="hero-title--primary d-none d-md-block">FUTANGUE CHALLENGE</h1>
+      <h1 class="hero-title--primary-2 d-block d-md-none">FUTANGUE CHALLENGE</h1> 
+
+      <h2 class="hero-title--secondary d-none d-md-block">La <strong class="text-white">Carrera</strong> que <strong class="text-green-light-secondary">te DESAFÍA</strong></h2>
+      <h2 class="hero-title--secondary-2 d-block d-md-none">La <strong class="text-white">Carrera</strong> que <strong class="text-green-light-secondary">te DESAFÍA</strong></h2>
+
+      <h2 class="hero-title--third d-none d-md-block">a <strong class="text-green-light-secondary">CONQUISTAR</strong> la <strong class="text-white">Selva Valdiviana</strong></h2>
+      <h2 class="hero-title--third-3 d-block d-md-none">a <strong class="text-green-light-secondary">CONQUISTAR</strong> la <strong class="text-white">Selva Valdiviana</strong></h2>
+
+      <div class="hero-logo_box d-flex justify-content-center justify-content-md-end">
+        <img src="assets/img/logofutangue.png" alt="" class="hero-logo d-none d-md-block">
+        <img src="assets/img/logofutangue.png" alt="" class="hero-logo-2 d-block d-md-none">
+      </div>
+    </div>
   </div>
+
   <div id="montana"></div>
 </header>
 <div class="deg-white"></div>
@@ -154,13 +170,17 @@
 
       <div class="col-12 col-md-6 col-info-date">
         <small class="date color-light-green-primary font-agenda-medium-italic">Sabado 10 de Febrero, 2024</small>
-        <h1 class="mb-4 color-green-primary">Futangue Challenge</h1>
+        <h1 class="color-green-primary">Futangue Challenge <br> <small><strong class="text-green-light-primary font-small">¡RENACE LA AVENTURA!</strong></small></h1>
         <p>
-          Febrero se prepara para recibir un gran clásico de nuestra selva valdiviana: Merrell - Subaru Futangue Challenge 2020. Esta versión llega renovada y te invita a vivir una experiencia única recorriendo senderos entre bosques, volcanes y saltos de agua de los Andes patagónicos chilenos.
+          <strong>FUTANGUE CHALLENGE by HOKA</strong> regresa con una versión renovada invitandote a vivir una experiencia única recorriendo senderos entre bosques, volcanes y saltos de agua de los Andes patagónicos chilenos. 
         </p>
-        <div class="d-flex justify-content-around">
+        <p>
+          <strong>¡INSCRÍBETE Y CONQUISTA la Selva Valdiviana!</strong>
+        </p>
+        <div class="d-flex flex-column-reverse align-items-end ">
           <a href="assets/pdf/BASES_FC_2024.pdf" class="btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Reglamento</a>
           <!-- <a href="assets/pdf/guia_tecnica_futangue_2020_final.pdf" class=" btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Guía Técnica</a> -->
+          <a href="#sold-tickets" class="btn btn-inscription">INSCRÍBETE</a>
         </div>
         <img src="assets/img/ramita.png" alt="" class="ramita">
       </div>
@@ -420,8 +440,7 @@
         <a href="mailto:contacto@sporthub.cl?Subject=2020-FUTANGUE" class="contact h4 font-agenda-medium-italic">¡ Escríbenos !</a>
       </div>
       <div class="col-12 col-md-3 d-flex align-items-center icon-social justify-content-center">
-        <a href="https://www.facebook.com/FutangueChallenge/" class="btn rounded-circle mx-3 py-2 px-3"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/futangue_challenge/" class="btn rounded-circle px-3 py-2"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/futangue_challenge/" class="btn px-3 py-2 btn--instagram" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
       <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
         <div class="text-center">
