cambio de slogan y se agregar logo de timetrack

--- a/index.html
+++ b/index.html
@@ -141,11 +141,8 @@
       <h1 class="hero-title--primary d-none d-md-block">FUTANGUE CHALLENGE</h1>
       <h1 class="hero-title--primary-2 d-block d-md-none">FUTANGUE CHALLENGE</h1> 
 
-      <h2 class="hero-title--secondary d-none d-md-block">La <strong class="text-white">Carrera</strong> que <strong class="text-green-light-secondary">te DESAFÍA</strong></h2>
-      <h2 class="hero-title--secondary-2 d-block d-md-none">La <strong class="text-white">Carrera</strong> que <strong class="text-green-light-secondary">te DESAFÍA</strong></h2>
-
-      <h2 class="hero-title--third d-none d-md-block">a <strong class="text-green-light-secondary">CONQUISTAR</strong> la <strong class="text-white">Selva Valdiviana</strong></h2>
-      <h2 class="hero-title--third-3 d-block d-md-none">a <strong class="text-green-light-secondary">CONQUISTAR</strong> la <strong class="text-white">Selva Valdiviana</strong></h2>
+      <h2 class="hero-title--secondary d-none d-md-block"><strong class="text-white">CORRER</strong> ES <strong class="text-green-light-secondary">NATURAL</strong></h2>
+      <h2 class="hero-title--secondary-2 d-block d-md-none"><strong class="text-white">CORRER</strong> ES <strong class="text-green-light-secondary">NATURAL</strong></h2>
 
       <div class="hero-logo_box d-flex justify-content-center justify-content-md-end">
         <img src="assets/img/logofutangue.png" alt="" class="hero-logo d-none d-md-block">
@@ -174,10 +171,8 @@
         <p>
           <strong>FUTANGUE CHALLENGE by HOKA</strong> regresa con una versión renovada invitandote a vivir una experiencia única recorriendo senderos entre bosques, volcanes y saltos de agua de los Andes patagónicos chilenos. 
         </p>
-        <p>
-          <strong>¡INSCRÍBETE Y CONQUISTA la Selva Valdiviana!</strong>
-        </p>
-        <div class="d-flex flex-column-reverse align-items-end ">
+        
+        <div class="d-flex flex-column-reverse align-items-center align-items-md-end ">
           <a href="assets/pdf/BASES_FC_2024.pdf" class="btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Reglamento</a>
           <!-- <a href="assets/pdf/guia_tecnica_futangue_2020_final.pdf" class=" btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Guía Técnica</a> -->
           <a href="#sold-tickets" class="btn btn-inscription">INSCRÍBETE</a>
@@ -439,14 +434,21 @@
         <br class="d-block d-md-none">
         <a href="mailto:contacto@sporthub.cl?Subject=2020-FUTANGUE" class="contact h4 font-agenda-medium-italic">¡ Escríbenos !</a>
       </div>
-      <div class="col-12 col-md-3 d-flex align-items-center icon-social justify-content-center">
+      <div class="col-12 col-md-2 d-flex align-items-center icon-social justify-content-center">
         <a href="https://www.instagram.com/futangue_challenge/" class="btn px-3 py-2 btn--instagram" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
-      <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
+      <div class="col-6 col-md-2 d-flex align-items-center justify-content-center">
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Organiza:</p>
           <img src="assets/img/sponsors/logo-sporthub-blanco.png" alt="" class="img-sporthub img-fluid">
+        </div>
+      </div>
+      <div class="col-6 col-md-2 d-flex align-items-center justify-content-center">
+        <div class="text-center">
+          <br class="d-block d-md-none">
+          <p class="h6">Cronometra:</p>
+          <img src="assets/img/sponsors/logo-timetrack-blanco.png" alt="" class="img-sporthub img-fluid">
         </div>
       </div>
     </div>
