actualización de circuitos

--- a/index.html
+++ b/index.html
@@ -258,21 +258,25 @@
           <div class="span-hero d-flex justify-content-center align-items-center">
             <strong>60</strong><small>K</small>
           </div>
-          <!-- <span class="span-bot-k60">4.200 M +</span>   -->
+          <span class="span-bot">
+            <strong>3.692</strong>
+            D
+            <strong class="distance-mas">+</strong>
+          </span>
         </button>
-        <!-- <div class="modal fade" id="circuit_60k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="circuit_60k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body text-light pt-5">
-                <img src="assets/img/circuits/60k_futangue_ruta.png" alt="" class="img-fluid">
-                <a href="assets/img/circuits/60k_futangue_ruta.png" class="text-light"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <img src="assets/img/circuits/60k_futangue_ruta-900.jpg" alt="" class="img-fluid" width="900" height="900">
+                <a href="assets/img/circuits/60k_futangue_ruta-1500.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
 
 
@@ -285,7 +289,7 @@
           </div>
           <span class="span-bot">
             <strong>2.190</strong>
-            M
+            D
             <strong class="distance-mas">+</strong>
           </span>  
         </button>
@@ -293,8 +297,8 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body">
-                <img src="assets/img/circuits/32k_futangue_ruta.jpg" alt="" class="img-fluid">
-                <a href="assets/img/circuits/32k_futangue_ruta.jpg" class="text-light"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <img src="assets/img/circuits/32k_futangue_ruta-900.jpg" alt="" class="img-fluid" width="900" height="900">
+                <a href="assets/img/circuits/32k_futangue_ruta-1500.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -314,7 +318,7 @@
           </div>
           <span class="span-bot">
             <strong>1.279</strong>
-            M
+            D
             <strong class="distance-mas">+</strong>
           </span>  
         </button>
@@ -322,8 +326,8 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body">
-                <img src="assets/img/circuits/21k_futangue_ruta.jpg" alt="" class="img-fluid">
-                <a href="assets/img/circuits/21k_futangue_ruta.jpg" class="text-light"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <img src="assets/img/circuits/21k_futangue_ruta-900.jpg" alt="" class="img-fluid" width="900" height="900">
+                <a href="assets/img/circuits/21k_futangue_ruta-1500.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -343,7 +347,7 @@
           </div>
           <span class="span-bot">
             <strong>926</strong>
-            M
+            D
             <strong class="distance-mas">+</strong>
           </span>  
         </button>
@@ -351,8 +355,8 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body">
-                <img src="assets/img/circuits/13k_futangue_ruta.jpg" alt="" class="img-fluid">
-                <a href="assets/img/circuits/13k_futangue_ruta.jpg" class="text-light"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <img src="assets/img/circuits/13k_futangue_ruta-900.jpg" alt="" class="img-fluid" width="900" height="900">
+                <a href="assets/img/circuits/13k_futangue_ruta-1500.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -384,16 +388,16 @@
           <thead>
             <tr>
               <th scope="col" class="th--init">PERIODO</th>
-              <th scope="col" class="th--active">PREVENTA 1</th>
-              <th scope="col">PREVENTA 2</th>
+              <th scope="col"><del>PREVENTA 1</del></th>
+              <th scope="col" class="th--active">PREVENTA 2</th>
               <th scope="col">VALOR OFICIAL</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td class="th--init">FECHAS</td>
-              <td scope="row" class="td--active">27 de SEP - 05 de OCT</td>
-              <td>06 de OCT - 31 de DIC</td>
+              <td scope="row"><del>27 de SEP - 05 de OCT</del></td>
+              <td class="td--active">06 de OCT - 31 de DIC</td>
               <td>01 de ENE - 3 de Feb</td>
             </tr>
           </tbody>
