cambio de logo principal y se agregan nuevos sponsor

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <!-- Custom Style --> 
   <link rel="stylesheet" href="assets/css/index.css">
   <link rel="stylesheet" href="assets/css/font-futangue.css">
+  <link rel="stylesheet" href="assets/css/sponsor.css">
 
   <link rel="icon" type="image/png" href="assets/img/favicon/hojita.png">
 
@@ -150,6 +151,46 @@
       <div class="hero-logo_box d-flex justify-content-center justify-content-md-end" data-aos="fade-left">
         <img src="assets/img/logofutangue.png" alt="" class="hero-logo d-none d-md-block">
         <img src="assets/img/logofutangue.png" alt="" class="hero-logo-2 d-block d-md-none">
+      </div>
+
+      <div class="slider-sponsor">
+        <div class="slide-sponsor-track">
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/subaru-logo-white.png" alt="Logo Oakley">
+          </div>
+
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/logo-oakley-white.png" alt="Logo Oakley">
+          </div>
+
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/garmin-logo-white.png" alt="Logo Oakley">
+          </div>
+          
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/subaru-logo-white.png" alt="Logo Oakley">
+          </div>
+
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/logo-oakley-white.png" alt="Logo Oakley">
+          </div>
+
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/garmin-logo-white.png" alt="Logo Oakley">
+          </div>
+          
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/subaru-logo-white.png" alt="Logo Oakley">
+          </div>
+
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/logo-oakley-white.png" alt="Logo Oakley">
+          </div>
+
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/garmin-logo-white.png" alt="Logo Oakley">
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -476,7 +517,7 @@
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Cronometra:</p>
-          <img src="assets/img/sponsors/logo-timetrack-blanco.png" alt="" class="img-sporthub img-fluid">
+          <a href="https://www.timetrack.cl/" target="_blank"><img src="assets/img/sponsors/logo-timetrack-blanco.png" alt="" class="img-sporthub img-fluid"></a>
         </div>
       </div>
     </div>
