actualizacion periodo de pago

--- a/index.html
+++ b/index.html
@@ -430,16 +430,16 @@
             <tr>
               <th scope="col" class="th--init">PERIODO</th>
               <th scope="col"><del>PREVENTA 1</del></th>
-              <th scope="col" class="th--active">PREVENTA 2</th>
-              <th scope="col">VALOR OFICIAL</th>
+              <th scope="col">PREVENTA 2</th>
+              <th scope="col" class="th--active">VALOR OFICIAL</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td class="th--init">FECHAS</td>
               <td scope="row"><del>27 de SEP - 05 de OCT</del></td>
-              <td class="td--active">06 de OCT - 31 de DIC</td>
-              <td>01 de ENE - 3 de Feb</td>
+              <td>06 de OCT - 31 de DIC</td>
+              <td class="td--active">01 de ENE - 3 de Feb</td>
             </tr>
           </tbody>
         </table>
