se agrega nuevo sponsor Brooks

--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@
           <div class="slide-sponsor">
             <img src="/assets/img/logos/garmin-logo-white.png" alt="Logo Oakley">
           </div>
+
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/logo-brooks.png" alt="Logo Oakley">
+          </div>
           
           <div class="slide-sponsor">
             <img src="/assets/img/logos/subaru-logo-white.png" alt="Logo Oakley">
@@ -178,6 +182,10 @@
           <div class="slide-sponsor">
             <img src="/assets/img/logos/garmin-logo-white.png" alt="Logo Oakley">
           </div>
+
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/logo-brooks.png" alt="Logo Oakley">
+          </div>
           
           <div class="slide-sponsor">
             <img src="/assets/img/logos/subaru-logo-white.png" alt="Logo Oakley">
@@ -189,6 +197,10 @@
 
           <div class="slide-sponsor">
             <img src="/assets/img/logos/garmin-logo-white.png" alt="Logo Oakley">
+          </div>
+
+          <div class="slide-sponsor">
+            <img src="/assets/img/logos/logo-brooks.png" alt="Logo Oakley">
           </div>
         </div>
       </div>
