actualizacion de circuitos con nuevo logo, actualizacion de reglamento, incorporación de horario de largada 60k y cambio decorativo en preventa 2

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="assets/pdf/BASES_FC_2024.pdf" target="_blank">
+        <a class="nav-link" href="assets/pdf/BASES_FC_2024-v2.pdf" target="_blank">
           <i class="icon-document"></i> Reglamento
           <span class="sr-only">(current)</span>
         </a>
@@ -118,7 +118,7 @@
         </a>
       </li>
       <li class="nav-item text-center">
-        <a class="nav-link icon-document mb-1" href="assets/pdf/BASES_FC_2024.pdf" target="_blank">
+        <a class="nav-link icon-document mb-1" href="assets/pdf/BASES_FC_2024-v2.pdf" target="_blank">
           <span class="span-a pt-2">Reglamento</span>
           <span class="sr-only">(current)</span>
         </a>
@@ -229,7 +229,7 @@
         </p>
         
         <div class="d-flex flex-column-reverse align-items-center align-items-md-end ">
-          <a href="assets/pdf/BASES_FC_2024.pdf" class="btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Reglamento</a>
+          <a href="assets/pdf/BASES_FC_2024-v2.pdf" class="btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Reglamento</a>
           <!-- <a href="assets/pdf/guia_tecnica_futangue_2020_final.pdf" class=" btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Guía Técnica</a> -->
           <a href="#sold-tickets" class="btn btn-inscription">INSCRÍBETE</a>
         </div>
@@ -307,7 +307,7 @@
       <!-- 60 KM -->
       <div class="col-6 col-md-3 text-center py-3">
         <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_60k">
-          <small>PRÓXIMAMENTE</small><br>
+          <small>largada: 5:00 am</small><br>
           <div class="span-hero d-flex justify-content-center align-items-center">
             <strong>60</strong><small>K</small>
           </div>
@@ -321,8 +321,8 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body text-light pt-5">
-                <img src="assets/img/circuits/60k_futangue_ruta-900.jpg" alt="" class="img-fluid" width="900" height="900">
-                <a href="assets/img/circuits/60k_futangue_ruta-1500.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <img src="assets/img/circuits/60k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
+                <a href="assets/img/circuits/60k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -350,8 +350,8 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body">
-                <img src="assets/img/circuits/32k_futangue_ruta-900.jpg" alt="" class="img-fluid" width="900" height="900">
-                <a href="assets/img/circuits/32k_futangue_ruta-1500.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <img src="assets/img/circuits/32k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
+                <a href="assets/img/circuits/32k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -379,8 +379,8 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body">
-                <img src="assets/img/circuits/21k_futangue_ruta-900.jpg" alt="" class="img-fluid" width="900" height="900">
-                <a href="assets/img/circuits/21k_futangue_ruta-1500.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <img src="assets/img/circuits/21k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
+                <a href="assets/img/circuits/21k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -408,8 +408,8 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body">
-                <img src="assets/img/circuits/13k_futangue_ruta-900.jpg" alt="" class="img-fluid" width="900" height="900">
-                <a href="assets/img/circuits/13k_futangue_ruta-1500.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <img src="assets/img/circuits/13k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
+                <a href="assets/img/circuits/13k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -442,7 +442,7 @@
             <tr>
               <th scope="col" class="th--init">PERIODO</th>
               <th scope="col"><del>PREVENTA 1</del></th>
-              <th scope="col">PREVENTA 2</th>
+              <th scope="col"><del>PREVENTA 2</del></th>
               <th scope="col" class="th--active">VALOR OFICIAL</th>
             </tr>
           </thead>
@@ -450,7 +450,7 @@
             <tr>
               <td class="th--init">FECHAS</td>
               <td scope="row"><del>27 de SEP - 05 de OCT</del></td>
-              <td>06 de OCT - 31 de DIC</td>
+              <td><del>06 de OCT - 31 de DIC</del></td>
               <td class="td--active">01 de ENE - 3 de Feb</td>
             </tr>
           </tbody>
