se agregaron los circuitos en kmz y gpx

--- a/index.html
+++ b/index.html
@@ -322,7 +322,9 @@
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body text-light pt-5">
                 <img src="assets/img/circuits/60k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
-                <a href="assets/img/circuits/60k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <a href="assets/img/circuits/60k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                <a href="assets/gpx/60k_FUTANGUE_CHALLENGE_2024_VF.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
+                <a href="assets/kmz/60k_FUTANGUE_CHALLENGE_2024_VF22.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -351,7 +353,9 @@
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body">
                 <img src="assets/img/circuits/32k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
-                <a href="assets/img/circuits/32k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <a href="assets/img/circuits/32k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                <a href="assets/gpx/32K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
+                <a href="assets/kmz/32K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -380,7 +384,9 @@
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body">
                 <img src="assets/img/circuits/21k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
-                <a href="assets/img/circuits/21k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <a href="assets/img/circuits/21k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                <a href="assets/gpx/21K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
+                <a href="assets/kmz/21K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -409,7 +415,9 @@
             <div class="modal-content bg-green-dark-primary">
               <div class="modal-body">
                 <img src="assets/img/circuits/13k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
-                <a href="assets/img/circuits/13k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a>
+                <a href="assets/img/circuits/13k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                <a href="assets/gpx/13K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
+                <a href="assets/kmz/13K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
               </div>
               <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
