--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
               <div class="modal-body">
                 <img src="assets/img/circuits/32k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
                 <a href="assets/img/circuits/32k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
-                <a href="assets/gpx/32K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
+                <a href="assets/gpx/32K Futangue Challenge 2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
                 <a href="assets/kmz/32K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
               </div>
               <div class="modal-footer border-top-0">
