manual del coorredor

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
         </p>
         
         <div class="d-flex flex-column-reverse align-items-center align-items-md-end ">
+          <a href="https://f000.backblazeb2.com/file/ekp-apps/FUTANGUE_CHALLENGE_-_MANUAL_DEL_CORREDOR_24.pdf" class=" btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Manuel del Corredor</a>
           <a href="assets/pdf/BASES_FC_2024-v2.pdf" class="btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Reglamento</a>
-          <!-- <a href="assets/pdf/guia_tecnica_futangue_2020_final.pdf" class=" btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Guía Técnica</a> -->
           <a href="#sold-tickets" class="btn btn-inscription">INSCRÍBETE</a>
         </div>
         <img src="assets/img/ramita.png" alt="" class="ramita">
