ajuste manual del corredor

--- a/index.html
+++ b/index.html
@@ -229,9 +229,8 @@
         </p>
         
         <div class="d-flex flex-column-reverse align-items-center align-items-md-end ">
-          <a href="https://f000.backblazeb2.com/file/ekp-apps/FUTANGUE_CHALLENGE_-_MANUAL_DEL_CORREDOR_24_v3.pdf" class=" btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> <strong>Descargar Manual del Corredor</strong></a>
           <a href="assets/pdf/BASES_FC_2024-v2.pdf" class="btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Reglamento</a>
-          <a href="#sold-tickets" class="btn btn-inscription">INSCRÍBETE</a>
+          <a href="https://f000.backblazeb2.com/file/ekp-apps/FUTANGUE_CHALLENGE_-_MANUAL_DEL_CORREDOR_24_v3.pdf" class="btn btn-inscription" target="_blank">Descargar Manual del Corredor</a>
         </div>
         <img src="assets/img/ramita.png" alt="" class="ramita">
       </div>
