--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@
       <h1 class="hero-title--primary-2 d-block d-md-none" data-aos="fade-right">FUTANGUE CHALLENGE</h1> 
 
       <h2 class="hero-title--secondary d-none d-md-block" data-aos="fade-right"><strong class="text-white">CORRER</strong> ES <strong class="text-green-light-secondary">NATURAL</strong></h2>
-      <h2 class="hero-title--secondary-2 d-block d-md-none" data-aos="fade-right"><strong class="text-white">CORRER</strong> ES <strong class="text-green-light-secondary">NATURAL</strong></h2>
+      <h2 class="hero-title--secondary-2 d-block d-md-none" data-aos="fade-right" style="margin-bottom: 2rem;"><strong class="text-white">CORRER</strong> ES <strong class="text-green-light-secondary">NATURAL</strong></h2>
+
+      
+      <div class="text-center ">        
+        <a href="https://results.sporthive.com/events/7161756896911436288" class="btn btn-inscription" style="padding: 20px 40px; font-size: 24px;margin-top: 0;" target="_blank">RESULTADOS</a>
+      </div>
 
       <div class="hero-logo_box d-flex justify-content-center justify-content-md-end" data-aos="fade-left">
         <img src="assets/img/logofutangue.png" alt="" class="hero-logo d-none d-md-block">
