--- a/index.html
+++ b/index.html
@@ -641,20 +641,15 @@
           <img src="assets/img/logofutangue.png" alt="" class="img-footer">
         </a>
       </div>
-      <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
-        <br class="d-block d-md-none">
-        <a href="mailto:contacto@sporthub.cl?Subject=2020-FUTANGUE" class="contact h4 font-agenda-medium-italic">¡ Escríbenos !</a>
-      </div>
-      <div class="col-12 col-md-2 d-flex align-items-center icon-social justify-content-center">
-        <a href="https://www.instagram.com/futangue_challenge/" class="btn px-3 py-2 btn--instagram" target="_blank"><i class="fab fa-instagram"></i></a>
-      </div>
-      <div class="col-6 col-md-2 d-flex align-items-center justify-content-center">
+
+      <div class="col-12 col-md-2 d-flex align-items-start justify-content-center">
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Organiza:</p>
           <img src="assets/img/sponsors/logo-sporthub-blanco.png" alt="" class="img-sporthub img-fluid">
         </div>
       </div>
+
       <div class="col-6 col-md-2 d-flex align-items-center justify-content-center">
         <div class="text-center">
           <br class="d-block d-md-none">
@@ -662,13 +657,23 @@
           <img src="assets/img/sponsors/Logo-the-las-lap-Blanco380x100.png" alt="" class="img-sporthub img-fluid">
         </div>
       </div>
+
       <div class="col-6 col-md-2 d-flex align-items-center justify-content-center">
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Partnership:</p>
           <img src="assets/img/sponsors/logo-mountain-trail-co.png" alt="" class="img-sporthub img-fluid">
         </div>
-      </div>      
+      </div>  
+      
+      <div class="col-12 col-md-2 d-flex align-items-center justify-content-center text-center mt-mobile">
+        <br class="d-block d-md-none">
+        <a href="mailto:contacto@sporthub.cl?Subject=2020-FUTANGUE" class="contact h4 font-agenda-medium-italic">¡ Escríbenos !</a>
+      </div>
+
+      <div class="col-12 col-md-1 d-flex align-items-center icon-social justify-content-center">
+        <a href="https://www.instagram.com/futangue_challenge/" class="btn px-3 py-2 btn--instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
       <!-- <div class="col mt-4">
         Power By
         <a href="https://www.timetrack.cl/" target="_blank"><img src="assets/img/sponsors/logo-timetrack-blanco.png" alt="" class="img-sporthub img-fluid"></a>
@@ -677,6 +682,8 @@
   </div>
 </footer>
 <!-- /footer -->
+
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
