--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <small class="date text-green-light-primary font-agenda-medium-italic">Sábado 8 y Domingo 9 de Febrero, 2025</small>
         <h1 class="color-green-primary">Futangue Challenge <br> <small class="text-green-light-primary sub-title">¡ Correr es Natural !</small></h1>
         <p>
-          <strong>FUTANGUE CHALLENGE by Asics,</strong> la carrera más hermosa de la Patagonia Norte regresa con una versión renovada invitandote a vivir una experiencia única recorriendo senderos entre bosques, volcanes y saltos de agua de los Andes patagónicos chilenos. 
+          <strong>FUTANGUE CHALLENGE by ASICS,</strong> la carrera más hermosa de la Patagonia Norte regresa con una versión renovada Invitándote a vivir una experiencia única recorriendo senderos entre bosques, volcanes y saltos de agua de los Andes patagónicos chilenos. 
         </p>
         
         <div class="d-flex flex-column-reverse align-items-end align-items-md-end ">
