--- a/index.html
+++ b/index.html
@@ -320,14 +320,14 @@
           </div>
           <div class="col-12 col-md-6">
             <div class="d-flex">
-              <p class="mr-date"><span class="text-green-light-primary"><b><i class="fa fa-calendar-check" aria-hidden="true"></i> FECHA:</b></span><br> Viernes 7 de Febrero 2025</p>
+              <p class="mr-date"><span class="text-green-light-primary"><b><i class="fa fa-calendar-check" aria-hidden="true"></i> FECHA:</b></span><br> Viernes 7 de febrero 2025</p>
               <p><span class="text-green-light-primary"><b><i class="fa fa-clock" aria-hidden="true"></i> HORARIO:</b></span><br> Entre las 14:00 y 20:00 horas.</p>
             </div>
             <p><span class="text-green-light-primary"><b><i class="fa fa-map" aria-hidden="true"></i> LUGAR:</b></span><br> Por definir</p>
           </div>
           <div class="col-12">
             <div class="border-green">
-              <p>* Entrega especial de kit Sábado 8 de Febrero, sólo para las distancias <strong class="font-bold">KV - 10K - 5K</strong></p>
+              <p>* Entrega especial de kit sábado 8 de febrero, sólo para las distancias <strong class="font-bold">KV - 10K - 5K</strong></p>
               <div class="d-flex">
                 <p class="mr-date"><span class="text-green-light-primary"><b><i class="fa fa-clock" aria-hidden="true"></i> HORARIO:</b></span><br> Entre las 14:00 y 19:00 horas.</p>
                 <p><span class="text-green-light-primary"><b><i class="fa fa-map" aria-hidden="true"></i> LUGAR:</b></span><br> Por definir</p>
@@ -582,7 +582,7 @@
         <h2 class="text-green-light-primary mb-0">INSCRIPCIONES</h2>
         <img src="assets/img/ramita.png" alt="" class="ramita mt-2 mb-3">
         <p>
-          ¡No te pierdas la oportunidad de asegurar TÚ lugar en el <strong class="text-green-light-primary">Futangue Challenge by Asics</strong> a precios especiales! Detalle de fechas de periodos de ventas a continuación:
+          ¡No te pierdas la oportunidad de asegurar TÚ lugar en el <strong class="text-green-light-primary">Futangue Challenge by ASICS</strong> a precios especiales! Detalle de fechas de periodos de ventas a continuación:
         </p>
       </div>
 
@@ -645,7 +645,7 @@
       <div class="col-12 col-md-2 d-flex align-items-start justify-content-center">
         <div class="text-center">
           <br class="d-block d-md-none">
-          <p class="h6">Organiza:</p>
+          <p class="h6">Organiza y Produce:</p>
           <img src="assets/img/sponsors/logo-sporthub-blanco.png" alt="" class="img-sporthub img-fluid">
         </div>
       </div>
