ajuste btn inscribete

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <h2 class="hero-title--secondary-2 d-block d-md-none" data-aos="fade-right" style="margin-bottom: 2rem;"><strong class="text-white">CORRER</strong> ES <strong class="text-green-light-primary">NATURAL</strong></h2>
 
           <div class="d-flex">
-            <a href="#sold-tickets" class="btn btn-inscription" target="_blank">INSCRÍBETE</a>
+            <a href="#sold-tickets" class="btn btn-inscription" >INSCRÍBETE</a>
           </div>
         </div>
 
