--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <link rel="icon" type="image/png" href="assets/img/favicon/hojita.png">
 
-  <title>Futangue Challenge by Hoka - 2024</title>
+  <title>Futangue Challenge by ASICS - 2025</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147067707-1"></script>
